# strategy-backtesting

./: .gitignore  CMakeLists.txt  README.md
data/: snp500.csv
src/: Asset.cpp  Asset.h  Backtest.cpp  Backtest.h  HistoricalData.cpp  HistoricalData.h  Portfolio.cpp  Portfolio.h  Utilities.cpp  Utilities.h  YahooFinance.cpp  YahooFinance.h  main.cpp  utilities.h
src/Data/Processor/: Processor.cpp  Processor.h
src/Strategy/: SimpleRebalance.cpp  SimpleRebalance.h  Strategy.h
src/data/: csv_processor.cpp  csv_processor.h  processor.h
src/data/processor/: Processor.cpp  Processor.h  csv_processor.cpp  csv_processor.h  processor.cpp  processor.h
src/data/provider/: csv_template.h  investing_com.h
src/strategies/: strategy.h
src/strategy/: MeanReversion.cpp  MeanReversion.h  MovingAverageCrossover.cpp  MovingAverageCrossover.h  PairTrading.cpp  PairTrading.h  SimpleRebalance.h  Strategy.h
